[gd_scene load_steps=8 format=3 uid="uid://bl4mdbfopn6ho"]

[ext_resource type="Script" path="res://scripts/enemy_num.gd" id="1_4rnte"]
[ext_resource type="PackedScene" uid="uid://c2adget47swu4" path="res://scenes/prefabs/health.tscn" id="2_mp2u2"]
[ext_resource type="LabelSettings" uid="uid://db3fwwehdaw3k" path="res://game_back.tres" id="2_nm3b1"]
[ext_resource type="PackedScene" uid="uid://b5tpdgc5545oh" path="res://scenes/prefabs/overlap/hurtbox.tscn" id="3_u224n"]
[ext_resource type="AudioStream" uid="uid://d3qx1bp4vabvg" path="res://audio/new/Hit_Hurt.wav" id="5_6nsnu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t2tgc"]
size = Vector2(36.0191, 36)

[sub_resource type="CircleShape2D" id="CircleShape2D_5qo1b"]
radius = 18.0

[node name="Enemy_num" type="CharacterBody2D"]
z_index = 50
collision_layer = 5
collision_mask = 4
motion_mode = 1
script = ExtResource("1_4rnte")

[node name="Label" type="Label" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
label_settings = ExtResource("2_nm3b1")

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_t2tgc")
disabled = true

[node name="Sprite2D" type="Sprite2D" parent="CollisionPolygon2D"]
z_index = 10

[node name="Timer" type="Timer" parent="."]

[node name="health" parent="." instance=ExtResource("2_mp2u2")]
max_health = 11

[node name="Hurtbox" parent="." instance=ExtResource("3_u224n")]
collision_layer = 4
collision_mask = 10

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_5qo1b")
disabled = true

[node name="SpawnSpots" type="Node2D" parent="."]

[node name="Node2D" type="Node2D" parent="SpawnSpots"]
position = Vector2(0, -42)

[node name="Node2D2" type="Node2D" parent="SpawnSpots"]
position = Vector2(0, 42)

[node name="Node2D3" type="Node2D" parent="SpawnSpots"]
position = Vector2(42, 0)

[node name="Node2D4" type="Node2D" parent="SpawnSpots"]
position = Vector2(-42, 0)

[node name="Hit_Audio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_6nsnu")
bus = &"SFX"

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="health_changed" from="health" to="." method="_on_health_health_changed"]
[connection signal="killed" from="health" to="." method="_on_health_killed"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]

[editable path="Hurtbox"]
